# WtClientCQ

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CQJSON.cpp  CQJSON.h  CQWt.sln  Doxyfile.cfg  WtD.vcxproj  WtD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
CQWtClient.vs2013/: CQWtClient.vs2013.sln
CQWtClient.vs2013/.nuget/: packages.config
CQWtClient.vs2013/CQWtClient.vs2013/: CQWtClient.vs2013.cpp  CQWtClient.vs2013.vcxproj  CQWtClient.vs2013.vcxproj.filters  MyTreeViewController.cpp  MyTreeViewController.h  MyTreeViewModel.cpp  MyTreeViewModel.h  MyTreeViewView.cpp  MyTreeViewView.h  ReadMe.txt  stdafx.cpp  stdafx.h
CQWtClient.vs2013/ShowCommandLineArguments/: ReadMe.txt  Resource.h  ShowCommandLineArguments.cpp  ShowCommandLineArguments.rc  ShowCommandLineArguments.vcxproj  ShowCommandLineArguments.vcxproj.filters  stdafx.cpp
Headers/: CQWtApp.h  ResultSetView.h
Sources/: CQWtApp.cpp  FolderView.C  ResultSetController.cpp  TreeViewDragDrop.C  WorkSpaceController.cpp  WorkSpaceView.cpp
WtD/: CMakeLists.txt  main.cpp  ui_wtd.h  wtd-debug.exe.launch  wtd-release.exe.launch  wtd.cpp  wtd.h  wtd.wui
charlas/: 20180302-charla-con-pedro.txt
doc/: Chapter 22. Boost.Tuple.htm  Chapter 23. Boost.Any.htm  Chapter 24. Boost.Variant.htm  Sorting virtual model - Wt - Redmine.htm  c++ - How to boost any_cast into std string - Stack Overflow.htm
doc/111/: Charts example.htm  Wt  Wt Ext TableView Class Reference.htm  Wt Widget Gallery - MVC Item models.htm  Wt Widget Gallery - MVC Tree Views.htm  Wt Widget Gallery - Tables.htm  Wt Widget Gallery.htm  c++ - How to boost any_cast into std string - Stack Overflow.htm
enviado/20180322/: Arquitectura-20180322-01.pptx  Notas-20180322.txt
notas/201803/: Arquitectura-20180308.txt  Arquitectura-20180315-01.ppt  Arquitectura-20180315.odg  Arquitectura-20180315.ppt  Arquitectura-20180315.txt  Arquitectura-20180316-01.ppt  Arquitectura-20180316.txt  Arquitectura-20180318.txt  Arquitectura-20180319-01.ppt  Arquitectura-20180319-02.ppt  (+13 more)
resources/: resources.xml
src/: CQJSONdummy.cpp  CQJSONdummy.h
(+165 files in other folders)
